--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,52 +1,41 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 const pageTitle = "Milky-Way";
 ---
-<Layout pageTitle={pageTitle}>
-    <div class="gif">
-        <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp"/>
-    </div>
-    <h1>Milky-Way</h1>
-    <span class="badge">Digital Craftsman (Developer)</span>
-    <h2>About</h2>
-    <p>
-        Praesent malesuada mi nisi, quis tempus magna venenatis ut.
-        Suspendisse tempor sem at scelerisque congue. Curabitur mollis,
-        mi id molestie finibus, metus sem sagittis nunc, euismod feugiat orci neque non lorem.
-        Aenean sollicitudin erat eu molestie tempus. Nunc ac eros elementum, fermentum lacus at,
-        pellentesque mauris. Suspendisse eros neque, interdum euismod consectetur convallis,
-        porttitor at massa. Phasellus a ultrices arcu. Donec viverra, lorem in pellentesque euismod,
-        libero justo gravida nibh, non ultricies justo purus ultrices est.
-    </p>
-    <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
-    </p>
-    <div class="center">
-        <a href="/works/">
-            <button class="btn">My portfolio</button>
-        </a>
-    </div>
-    <h2>Skills</h2>
-    <div class="skills center">
-        <img class="skills__img" width="46" height="46" alt="C#" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="DotNetCore" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Angular" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Bootstrap" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="CSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="HTML" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
-    </div>
-    <h2>Interests</h2>
-    <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
-    </p>
-</Layout>
 
+<Layout pageTitle={pageTitle}>
+  <div class="gif">
+    <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp" />
+  </div>
+  <h1>Happy Birthday Adek!</h1>
+  <h2>Prolog</h2>
+  <p>
+    Selamat ulang tahun yang ke-24 sayangku, semoga kamu diberi kebahagiaan,
+    kesehatan, rejeki dan sukses selalu. Di umur ke-24, aku tahu bakal makin
+    banyak cobaan yang kamu alami, entah dari kerjaan, hubungan, keluarga, dan
+    lainnya. Tapi aku bakal selalu doakan yang terbaik buat kamu. Amin...
+  </p>
+  <div class="gif">
+    <img width="300" height="259" alt="RaccoonSpaceGif" src="/laptop.webp" />
+  </div>
+  <h2>Pembahasan</h2>
+  <p>
+    Aku tau kalau sekarang kita sering banget beranten, makin pasif satu sama
+    lain, stress masalah kerjaan dan lainnya. Tapi aku tetep berharap bisa terus
+    sama kamu, aku pingin kita hadapi semua itu barengan, meski masing-masing
+    kadang masih sulit buat mengalah. Namun semoga masalah apapun yang terjadi,
+    kita tetap bisa menyelesaikannya bersama.
+  </p>
+  <div class="gif">
+    <img width="300" height="259" alt="RaccoonSpaceGif" src="/404.webp" />
+  </div>
+  <h2>Harapan Kedepan</h2>
+  <p>
+    Semoga kita selalu bahagia, semoga kita selalu bisa bersama terus, makin
+    dewasa, dan bisa menyelesaikan masalah apapun bersama. Aku tahu tahun ini
+    banyak masalah di kita, tapi aku tetep berharap bisa terus sama kamu. Tentu
+    aku minta maaf semua salahku kemaren-kemaren, bahkan lupa ngirim ucapan hari
+    ini, aku bener-bener minta maaf.
+  </p>
+  <p>Akhir kata selamat ulang tahun yang ke-24. dari Mas.</p>
+</Layout>
